gauguin: Move to common Xiaomi fingerprint HIDL
Change-Id: I070ab965ff932f71f2ffbd4d7986752295810726

--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -28,6 +28,7 @@
 import /vendor/etc/init/hw/init.qcom.usb.rc
 import /vendor/etc/init/hw/init.target.rc
 import /vendor/etc/init/hw/init.gauguin.rc
+import /vendor/etc/init/hw/init.gauguin.fingerprint.rc
 
 on early-init
     mount tracefs tracefs /sys/kernel/tracing
