gauguin: Do not balance msm_drm and kgsl_3d0 IRQs
These are critical for display performance and should not be balanced
in order to improve latency and responsiveness.

And also affine them.

Change-Id: If49ecb8757d133a7fad0d7946837b35403e57c2a

--- a/rootdir/etc/init/hw/init.target.rc
+++ b/rootdir/etc/init/hw/init.target.rc
@@ -106,6 +106,13 @@ on charger
     setprop vendor.usb.controller a600000.dwc3
     setprop sys.usb.configfs 1
 
+on property:vendor.post_boot.parsed=1
+    # IRQ Tuning
+    # IRQ 58: kgsl-3d0
+    # IRQ 212: msm_drm
+    write /proc/irq/58/smp_affinity_list 1
+    write /proc/irq/212/smp_affinity_list 2
+
 on property:sys.boot_completed=1
     # Enable ZRAM on boot_complete
     swapon_all /vendor/etc/fstab.zram
