--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -27,7 +27,7 @@
 
 import /vendor/etc/init/hw/init.qcom.usb.rc
 import /vendor/etc/init/hw/init.target.rc
-import /vendor/etc/init/hw/init.xiaomi.rc
+import /vendor/etc/init/hw/init.gauguin.rc
 
 on early-init
     mount tracefs tracefs /sys/kernel/tracing
