gauguin: Properly configure NFC dependencies
Change-Id: I554dd137da9831e2a24f7e3f758e49d45844fe4a

--- a/rootdir/etc/init/hw/init.qcom.rc
+++ b/rootdir/etc/init/hw/init.qcom.rc
@@ -29,6 +29,7 @@ import /vendor/etc/init/hw/init.qcom.usb.rc
 import /vendor/etc/init/hw/init.target.rc
 import /vendor/etc/init/hw/init.gauguin.rc
 import /vendor/etc/init/hw/init.gauguin.fingerprint.rc
+import /vendor/etc/init/hw/init.gauguin.nfc.rc
 
 on early-init
     mount tracefs tracefs /sys/kernel/tracing
